--- a/agencia de viagens/index.html
+++ b/agencia de viagens/index.html
@@ -3,19 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agencia de Viagens</title>
+    <title>Agencia de viagens</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>Header</header>
-    <div class="SidebarA">Sidebar A
-        <img class="paises" src="imagens/egito.webp">
-        <img src="imagens/italia.jpg" class="paises">
-        <img src="imagens/nova zelandia.jfif" class="paises">
+    <header>
+        <h1 class="oswald">Pelo Mundo</h1>
+    </header>
+    <main>
+        <div class="sidebarA">
+            <h1 class="oswald">Sobre nós</h1>
+            <p class="oswald">Somos uma agência de viagens que preza o bem estar, a boa locomoção, a felicidade e o entreterimento dos nosso clientes. Estamos a 20 anos nessa área, e já fizemos mais de 20.000 viagens. Nossa agência é uma das melhores do mundo, temos planos diferenciados e reservas nos melhores hoteis dos países abaixo.</p>
+        </div>
+
+        <div class="sidebarB">
+            <h1 class="oswald">Paises/Planos Disponiveis</h1>
+        </div>
+
+        <div class="main">
+        <div class="container">
+            <h3 class="oswald">Egito</h3>
+            <p class="oswald">Para o Egito nós temos </p>
+            <img src="imagens/egito.webp" alt="egito" class="paises">
+        </div>
+        <div class="container">
+            <h3 class="oswald">Itália</h3>
+            <p class="oswald">Texto</p>
+            <img src="imagens/italia.jpg" alt="italia" class="paises">
+        </div>
+        <div class="container">
+            <h3 class="oswald">Nova zelândia</h3>
+            <p class="oswald">Texto</p>
+            <img src="imagens/nova zelandia.jfif" alt="nova zelandia" class="paises">
+        </div>
     </div>
-    <main>Main Content</main>
-    <div class="SidebarB">Sidebar B</div>
-    <footer>Footer</footer>
+    <div class="form">
+        <h1 class="oswald">Acesse o formulário para contato</h1>
+        <button type="submit"><a href="formulário.html">Formulário</a></button>
+    </div>
+    </main>
+    <footer>
+        &copy; 2024 Direito Reservados
+    </footer>
 </body>
 </html>
