--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
         <h1>Movie Reviews</h1>
         <nav>
             <ul>
-                <li><a id="home" href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="indexromance.html">Romance</a></li>
                 <li><a href="../site/indexcomedia.html">Comédia</a></li>
                 <li><a href="indexterror.html">Terror</a></li>
