--- a/agencia de viagens/index.html
+++ b/agencia de viagens/index.html
@@ -16,33 +16,33 @@
     </header>
     <main>
         <div class="sidebarA">
-            <h1 class="oswald">Sobre nós</h1>
-            <p class="oswald">Somos uma agência de viagens que preza o bem estar, a boa locomoção, a felicidade e o entreterimento dos nosso clientes. Estamos a 20 anos nessa área, e já fizemos mais de 20.000 viagens. Nossa agência é uma das melhores do mundo, temos planos diferenciados e reservas nos melhores hoteis dos países abaixo.</p>
+            <h3 class="oswald">Bem-vindo à Pelo Mundo - Seu Passaporte para Experiências Inesquecíveis!</h2>
+            <p class="oswald">Na Pelo Mundo, não vendemos apenas pacotes turísticos; oferecemos a você a oportunidade de viver momentos únicos, descobrir novos horizontes e criar memórias que durarão a vida toda. Com uma equipe de especialistas apaixonados por viagens, nosso objetivo é transformar os seus sonhos em realidade, proporcionando uma experiência personalizada e livre de preocupações.</p>
         </div>
 
         <div class="sidebarB">
-            <h1 class="oswald">Paises/Planos Disponiveis</h1>
+            <h3 class="oswald">Paises/Planos Disponiveis</h2>
         </div>
 
         <div class="main">
         <div class="container">
             <h3 class="oswald">Egito</h3>
-            <p class="oswald">Para o Egito nós temos </p>
+            <p class="oswald">Para o Egito nós temos uma viagem de 10 dias com experiencias diferenciadas, com passeios pelas Pirâmides de Gizé, Museu Egípcio, Alexandria, Cairo Antigo e Mercado Khan El Khalili</p>
             <img src="imagens/egito.webp" alt="egito" class="paises">
         </div>
         <div class="container">
             <h3 class="oswald">Itália</h3>
-            <p class="oswald">Texto</p>
+            <p class="oswald">O nosso plano de viagem para Itália possui 12 dias de destinos distintos, mas encantadores, cpodendo visitar duas cidades como Milão e Florença. Você ira visitar o Castello Sforzesco e a Galleria dell'Accademia.</p>
             <img src="imagens/italia.jpg" alt="italia" class="paises">
         </div>
         <div class="container">
             <h3 class="oswald">Nova zelândia</h3>
-            <p class="oswald">Texto</p>
+            <p class="oswald">Que tal uma viagem de 14 dias para a Nova Zelândia, que abrange tanto a Ilha Norte quanto a Ilha Sul, explorando uma mistura de paisagens naturais deslumbrantes, cultura Maori e aventuras ao ar livre.</p>
             <img src="imagens/nova zelandia.jfif" alt="nova zelandia" class="paises">
         </div>
     </div>
     <div class="form">
-        <h1 class="oswald">Acesse o formulário para contato</h1>
+        <h3 class="oswald">Acesse o formulário para contato</h3>
         <button type="submit"><a href="formulário.html">Formulário</a></button>
     </div>
     </main>
