--- a/site sobre alguma coisa/index.html
+++ b/site sobre alguma coisa/index.html
@@ -17,7 +17,7 @@
             <a class="kanit-thin" href="../testes/index.html">Home</a>
             <a class="kanit-thin" href="#">Sobre nós</a>
             <a class="kanit-thin" href="#">Contato</a>
-            <a class="kanit-thin" href="../testes/login.html">Login</a>
+            <a class="kanit-thin" href="../site sobre alguma coisa/login.html">Login</a>
         </nav>
     </header>
     <div class="container">
@@ -28,7 +28,7 @@
     <h1 class="kanit-thin" id="menu">Cardápio</h1>
     <div class="gallery" id="cardápio">
         <div class="image">
-            <img src="../site sobre alguma coisa/comidas/hamburger.jpg" alt="Burger">
+           <a href=""><img src="../site sobre alguma coisa/comidas/hamburger.jpg" alt="Burger"></a>
             <p class="kanit-thin">Bugers</p>
         </div>
         <div class="image">
