--- a/site sobre alguma coisa/index.html
+++ b/site sobre alguma coisa/index.html
@@ -28,7 +28,7 @@
     <h1 class="kanit-thin" id="menu">Cardápio</h1>
     <div class="gallery" id="cardápio">
         <div class="image">
-           <a href=""><img src="../site sobre alguma coisa/comidas/hamburger.jpg" alt="Burger"></a>
+           <img src="../site sobre alguma coisa/comidas/hamburger.jpg" alt="Burger">
             <p class="kanit-thin">Bugers</p>
         </div>
         <div class="image">
