--- a/site sobre alguma coisa/login.html
+++ b/site sobre alguma coisa/login.html
@@ -12,13 +12,13 @@
 <body>
     <header>
         <div class="icon">
-        <img src="imagens2/restaurante.png"></img>
+        <img src=""></img>
         </div>
     </header>
  
     <div class="form-container">
         <form action="#" method="POST">
-            <h2  class="kanit-thin">Entre em Contato</h2>
+            <h2 class="kanit-thin">Entre em Contato</h2>
             <label  class="kanit-thin" for="name">Nome:</label>
             <input  class="kanit-thin" type="text" id="name" name="name" placeholder="Digite seu nome" required>
  
