--- a/site sobre alguma coisa/login.html
+++ b/site sobre alguma coisa/login.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="icon">
-        <img src=""></img>
+        <img src="comidas/servindo-comida.png"></img>
         </div>
     </header>
  
