--- a/site sobre alguma coisa/index.html
+++ b/site sobre alguma coisa/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <h2 class="kanit-thin">Refinado Sabor</h2>
-            <a class="kanit-thin" href="../testes/index.html">Home</a>
+            <a class="kanit-thin" href="../site sobre alguma coisa/index.html">Home</a>
             <a class="kanit-thin" href="#">Sobre nós</a>
             <a class="kanit-thin" href="#">Contato</a>
             <a class="kanit-thin" href="../site sobre alguma coisa/login.html">Login</a>
@@ -54,5 +54,6 @@
             <p class="kanit-thin">Cakes</p>
         </div>
     </div>
+    <footer class="kanit-thin" >&copy; 2024 Refinado Sabor, Direitos Reservados</footer>
 </body>
 </html>
