--- a/site sobre alguma coisa/login.html
+++ b/site sobre alguma coisa/login.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário com Imagem de Fundo</title>
+    <title>Refinado Sabor</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="login.css">
+    <link rel="shortcut icon" href="c:\Users\EDUARDAORDAHYSCIORTI\AppData\Local\Temp\ea154cec-75a4-41c4-ac6f-88892b78af61_favicon_io.zip.f61\favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
     <header>
