--- a/site sobre alguma coisa/index.html
+++ b/site sobre alguma coisa/index.html
@@ -16,7 +16,7 @@
             <h2 class="kanit-thin">Refinado Sabor</h2>
             <a class="kanit-thin" href="../site sobre alguma coisa/index.html">Home</a>
             <a class="kanit-thin" href="../site sobre alguma coisa/sobrenos.html">Sobre nós</a>
-            <a class="kanit-thin" href="#">Contato</a>
+            <a class="kanit-thin" href="../site sobre alguma coisa/contato.html">Contato</a>
             <a class="kanit-thin" href="../site sobre alguma coisa/login.html">Login</a>
         </nav>
     </header>
