--- a/site sobre alguma coisa/sobrenos.html
+++ b/site sobre alguma coisa/sobrenos.html
@@ -14,20 +14,23 @@
     <header>
         <nav>
             <h2 class="kanit-thin">Refinado Sabor</h2>
-            <a class="kanit-thin" href="../testes/index.html">Home</a>
-            <a class="kanit-thin" href="../Site livre/index.html">Sobre nós</a>
-            <a class="kanit-thin" href="#">Contato</a>
-            <a class="kanit-thin" href="../testes/login.html">Login</a>
+            <a class="kanit-thin" href="../site sobre alguma coisa/index.html">Home</a>
+            <a class="kanit-thin" href="../site sobre alguma coisa/sobrenos.html">Sobre nós</a>
+            <a class="kanit-thin" href="../site sobre alguma coisa/contato.html">Contato</a>
+            <a class="kanit-thin" href="../site sobre alguma coisa/login.html">Login</a>
         </nav>
     </header>
     <div class="container">
         <h1 class="kanit-thin">Sobre Nós</h1>
     </div>
     <div class="p">
+    <h3 class="kanit-thin">Algumas palavras sobre nós</h3>
     <p class="kanit-thin"> Bem-vindo ao Refinado Sabor, onde a paixão pela culinária se encontra com a tradição e a inovação. Fundado em 1960, nosso restaurante nasceu do sonho de proporcionar uma experiência gastronômica única, que celebra o melhor dos sabores locais e internacionais. <p>
     <p class="kanit-thin"> No Refinado Sabor, cada prato é uma obra de arte, cuidadosamente elaborado com ingredientes frescos e de alta qualidade. Nossa equipe de chefs talentosos combina técnicas tradicionais com toques modernos, criando uma experiência culinária que agrada todos os paladares. Desde a seleção dos ingredientes até a apresentação final, cada detalhe é pensado para oferecer uma refeição memorável. <p>
+    <img src="" alt="">
 </div>
     <div class="p">
+        <h3 class="kanit-thin">Nosso ambiente</h3>
         <p class="kanit-thin"> Nosso ambiente acolhedor e sofisticado reflete a nossa dedicação ao conforto e à excelência. Queremos que cada visita ao nosso restaurante seja mais do que uma refeição – queremos que seja um momento especial, onde você possa desfrutar de boa companhia, excelente comida e um serviço impecável. <p>
         <p class="kanit-thin"> Acreditamos que comer bem é uma forma de celebrar a vida, e estamos comprometidos em oferecer não apenas uma refeição, mas uma verdadeira experiência gastronômica. Se você está à procura de um lugar para uma celebração especial, um jantar casual ou simplesmente uma pausa para apreciar a boa comida, estamos aqui para recebê-lo com um sorriso e um prato delicioso. <p>
         <p class="kanit-thin"> Obrigado por escolher o Refinado Sabor. Esperamos vê-lo em breve e oferecer a você uma experiência que vá além das suas expectativas.</p>
