--- a/site sobre alguma coisa/contato.html
+++ b/site sobre alguma coisa/contato.html
@@ -28,15 +28,11 @@
 
     <section class="destinos">
         <div class="container">
-            <div class="titulo">
-        
+            <div class="destino">
+                <h3 class="kanit-thin">Telefone</h3>
+                <p>(51) 9254-6780</p>
             </div>
             <div class="destino">
-                <h3 class="kanit-thin">(51) 9254-6780</h3>
-                <p>Telefone</p>
-            </div>
-            <div class="destino">
-                
                 <h3>E-mail</h3>
                 <p>refinadosabor@gmail.com</p>
             </div>
@@ -48,7 +44,7 @@
     </section>
 
     <footer>
-        <footer class="kanit-thin" >&copy; 2024 Refinado Sabor. Todos os direitos reservados</footer>
+        <footer class="kanit-thin">&copy; 2024 Refinado Sabor. Todos os direitos reservados</footer>
     </footer>
 </body>
 </html>
