--- a/site sobre alguma coisa/index.html
+++ b/site sobre alguma coisa/index.html
@@ -54,6 +54,6 @@
             <p class="kanit-thin">Cakes</p>
         </div>
     </div>
-    <footer class="kanit-thin" >&copy; 2024 Refinado Sabor, Direitos Reservados</footer>
+    <footer class="kanit-thin" >&copy; 2024 Refinado Sabor. Todos os direitos reservados</footer>
 </body>
 </html>
