--- a/site sobre alguma coisa/sobrenos.html
+++ b/site sobre alguma coisa/sobrenos.html
@@ -34,6 +34,6 @@
         <p class="kanit-thin"> Acreditamos que comer bem é uma forma de celebrar a vida, e estamos comprometidos em oferecer não apenas uma refeição, mas uma verdadeira experiência gastronômica. Se você está à procura de um lugar para uma celebração especial, um jantar casual ou simplesmente uma pausa para apreciar a boa comida, estamos aqui para recebê-lo com um sorriso e um prato delicioso. <p>
         <p class="kanit-thin"> Obrigado por escolher o Refinado Sabor. Esperamos vê-lo em breve e oferecer a você uma experiência que vá além das suas expectativas.</p>
     </div>
-    <footer class="kanit-thin" >&copy; 2024 Refinado Sabor, Direitos Reservados</footer>
+    <footer class="kanit-thin" >&copy; 2024 Refinado Sabor. Todos os direitos reservados</footer>
 </body>
 </html>
