--- a/horários/horarios.html
+++ b/horários/horarios.html
@@ -19,27 +19,27 @@
         </tr>
         <tr>
             <th>07:30</th>
-            <td class="tec">Técnico</td>
-            <td class="ling">Artes</td>
-            <td class="ch">História</td>
+            <td class="ch">Filo/Socio</td>
+            <td class="cn">Química</td>
+            <td class="ling">Português</td>
             <td class="tec">PI</td>
-            <td class="ch">Filosofia</td>
+            <td class="ch">História</td>
         </tr>
         <tr>
             <th>08:25</th>
             <td class="tec">Técnico</td>
-            <td class="mat">Matemática</td>
-            <td class="cn">Química</td>
-            <td class="ling">Português</td>
-            <td class="tec">Técnico</td>
+            <td class="cn">Biologia</td>
+            <td class="ling">Inglês</td>
+            <td class="ling">Artes</td>
+            <td class="ch">Geografia</td>
         </tr>
         <tr>
             <th>9:30</th>
+            <td class="tec">Técnico</td>
+            <td class="tec">Técnico</td>
+            <td class="mat">Matemática</td>
             <td class="ling">Português</td>
             <td class="mat">Matemática</td>
-            <td class="ch">Geografia</td>
-            <td class="ling">Português</td>
-            <td class="tec">Técnico</td>
         </tr>
         <tr>
             <th>10:15</th>
@@ -51,19 +51,19 @@
         </tr>
         <tr>
             <th>10:40</th>
-            <td class="cn">Biologia</td>
             <td class="tec">Técnico</td>
+            <td class="tec">Técnico</td>
+            <td class="mat">Matemática</td>
             <td class="pv">PV</td>
-            <td class="ling">Inglês</td>
-            <td class="tec">Técnico</td>
+            <td class="ling">Português</td>
         </tr>
         <tr>
             <th>11:35</th>
-            <td class="mat">Matemática</td>
-            <td class="ch">Sociologia</td>
-            <td class="pv">PV</td>
+            <td class="livre">Livre</td>
             <td class="tec">Técnico</td>
+            <td class="pv">PV</td>
             <td class="cn">Física</td>
+            <td class="tec">Técnico</td>
         </tr>
     </table>
 </body>
