--- a/atividades/modificarDOM.html
+++ b/atividades/modificarDOM.html
@@ -3,18 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My project</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
         <h1>Bem vindo ao meu projeto</h1>
-    </header>
-    <main>
-        <button id="meuBotao">Clique em mim!</button>
         <button onclick="mudarTexto()">Clique aqui</button>
         <p id="mensagem">Texto original</p>
-    </main>
     <script src="script.js"></script>
 </body>
 </html>
