--- a/tabuada/index.html
+++ b/tabuada/index.html
@@ -10,8 +10,7 @@
         <h1>Digite um número para saber a tabuada</h1>
         <input type="number" id="num" placeholder="Digite uma palavra">
         <button onclick="exibirTabuada()">Ver tabuada</button>
-
-        <p id="resultado"></p>
+        <div id="resultado"></div>
     </div>
 
     <script src="script.js"></script>
